# embedded-rust-espressif

./: .gitignore  .justfile  Cargo.toml  README.md
.cargo/: config.toml
Documentation/: book.toml
Documentation/src/: 01_0_intro.md  01_3_no_std.md  02_hello_world.md  SUMMARY.md
Documentation/src/images/: esp-rust.drawio
analog-adc/: Cargo.toml
analog-adc/src/: main.rs
docs/src/: 01_1_hardware.md  01_2_software.md  02_hello_world.md
embassy-hello-world/src/: main.rs
embassy/embassy-hello-world/: Cargo.toml
embassy/embassy-hello-world/src/: main.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
led-rgb/: Cargo.toml
led-rgb/src/: main.rs
