[workspace]
resolver = "3"
members = ["hello-world"]

[workspace.package]
authors = ["Moraless Philius"]
rust-version = "1.88"

[workspace.dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
log = "0.4.27"

[profile.release]
opt-level = "z"
overflow-checks = false
debug = true
codegen-units = 1
strip = true
panic = "abort"
lto = "fat"
